--- a/view/index/index.html
+++ b/view/index/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理员</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/Administrator.css">
+    <title>数字逻辑电路虚拟仿真系统</title>
+    <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="../../css/base.css">
 </head>
 <body>
 <!--顶部区域-->
@@ -25,27 +25,18 @@
     <div class="row">
         <div class="col_nav">
             <ul>
-                <li><a href=index.html class="nav_a" target="_blank">首页</a></li>
+                <li><a href="#" class="nav_a">首页</a></li>
                 <li><a href="#" class="nav_a">实验视频</a></li>
                 <li><a href="#" class="nav_a">芯片属性</a></li>
-                <li><a href="teacher.html" class="nav_a" target="_blank">教师</a></li>
-                <li><a href="student-necExp.html" class="nav_a"  target="_blank">学生</a></li>
-                <li><a href="#" class="nav_a">管理员</a></li>
+                <li><a href="../teachers/teacher.html" class="nav_a" target="_blank">教师</a></li>
+                <li><a href="../students/student-necExp.html" class="nav_a"  target="_blank">学生</a></li>
+                <li><a href="../admin/administrator.html" class="nav_a" target="_blank">管理员</a></li>
             </ul>
         </div>
     </div>
 </div>
 <!--内容区域-->
-<div class="contentAdministrator">
-    <div class="contentAdministratorLeft">
-        <ul>
-            <li><a href="#">课程管理</a></li>
-            <li><a href="#">实验用户管理</a></li>
-        </ul>
-    </div>
-    <div class="contentAdministratorRight">
-    </div>
-</div>
+<div class="content"></div>
 <!--底部区域-->
 <div class="footer"></div>
 <script>
@@ -62,7 +53,7 @@
             //为什么加个循环之后就不行了
         }*/
         //以下是需要优化的代码！！
-        function setopacity() {
+        function setOpacity() {
             //设置a标签的悬浮透明度，CSS找不到这里的a标签很奇怪
             nav_a[0].onmouseover=function () {
                 nav_a[0].style.opacity="0.5";
@@ -101,7 +92,7 @@
                 nav_a[5].style.opacity="1";
             };
         }
-        setopacity();
+        setOpacity();
     }
 </script>
 </body>
