--- a/view/students/student-necExp.html
+++ b/view/students/student-necExp.html
@@ -39,7 +39,7 @@
 <div class="content">
     <div class="contentLeft">
         <ul>
-            <li><a href="#">必做实验</a></li>
+            <li><a href="../students/stu-shiyan.html">必做实验</a></li>
             <li><a href="#">选做实验</a></li>
             <li><a href="#">自主实验</a></li>
             <li><a href="#">保存实验结果</a></li>
