--- a/view/index/index.html
+++ b/view/index/index.html
@@ -20,80 +20,34 @@
         </div>
     </div>
 </div>
-<!--导航条-->
-<div class="navigation">
-    <div class="row">
-        <div class="col_nav">
-            <ul>
-                <li><a href="#" class="nav_a">首页</a></li>
-                <li><a href="#" class="nav_a">实验视频</a></li>
-                <li><a href="#" class="nav_a">芯片属性</a></li>
-                <li><a href="../teachers/teacher.html" class="nav_a" target="_blank">教师</a></li>
-                <li><a href="../students/student-necExp.html" class="nav_a"  target="_blank">学生</a></li>
-                <li><a href="../admin/administrator.html" class="nav_a" target="_blank">管理员</a></li>
-            </ul>
+<!--内容区域-->
+<div class="content">
+    <div class="login">
+        <div class="login_top">
+            <div>
+                <h1>WELCOME TO</h1>
+            </div>
+            <div>
+                <h1>
+                    VSES.COM
+                </h1>
+            </div>
+        </div>
+        <div class="login_middle">
+            <div class="account">
+                <span>账号：</span><input type="text">
+                <br>
+                <span>密码：</span><input type="password">
+                <button>Login</button>
+            </div>
+        </div>
+        <div class="login_bottom">
+            <a href="#">注册/Register</a>
+            <a href="#">找回密码/Reset password</a>
         </div>
     </div>
 </div>
-<!--内容区域-->
-<div class="content"></div>
 <!--底部区域-->
 <div class="footer"></div>
-<script>
-    window.onload=function () {
-        var nav_a=document.getElementsByClassName("nav_a");
-        console.log(nav_a);
-        /*for(var i=0;i<nav_a.length;i++){
-            nav_a[i].onmouseover=function () {
-                nav_a[i].style.opacity="0.5";
-            };
-            nav_a[i].onmouseout=function () {
-                nav_a[i].style.opacity="1";
-            };
-            //为什么加个循环之后就不行了
-        }*/
-        //以下是需要优化的代码！！
-        function setOpacity() {
-            //设置a标签的悬浮透明度，CSS找不到这里的a标签很奇怪
-            nav_a[0].onmouseover=function () {
-                nav_a[0].style.opacity="0.5";
-            };
-            nav_a[0].onmouseout=function () {
-                nav_a[0].style.opacity="1";
-            };
-            nav_a[1].onmouseover=function () {
-                nav_a[1].style.opacity="0.5";
-            };
-            nav_a[1].onmouseout=function () {
-                nav_a[1].style.opacity="1";
-            };
-            nav_a[2].onmouseover=function () {
-                nav_a[2].style.opacity="0.5";
-            };
-            nav_a[2].onmouseout=function () {
-                nav_a[2].style.opacity="1";
-            };
-            nav_a[3].onmouseover=function () {
-                nav_a[3].style.opacity="0.5";
-            };
-            nav_a[3].onmouseout=function () {
-                nav_a[3].style.opacity="1";
-            };
-            nav_a[4].onmouseover=function () {
-                nav_a[4].style.opacity="0.5";
-            };
-            nav_a[4].onmouseout=function () {
-                nav_a[4].style.opacity="1";
-            };
-            nav_a[5].onmouseover=function () {
-                nav_a[5].style.opacity="0.5";
-            };
-            nav_a[5].onmouseout=function () {
-                nav_a[5].style.opacity="1";
-            };
-        }
-        setOpacity();
-    }
-</script>
 </body>
 </html>
