--- a/view/students/student-necExp.html
+++ b/view/students/student-necExp.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col_nav">
             <ul>
-                <li><a class="nav_a" href="../index/index.html" target="_blank">首页</a></li>
+                <li><a class="nav_a" href="../../index.html" target="_blank">首页</a></li>
                 <li><a class="nav_a" href="#">实验视频</a></li>
                 <li><a class="nav_a" href="#">芯片属性</a></li>
                 <li><a class="nav_a" href="../teachers/teacher.html" target="_blank">教师</a></li>
