--- a/view/teachers/teacher.html
+++ b/view/teachers/teacher.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col_nav">
             <ul>
-                <li><a href="../index/index.html" class="nav_a" target="_blank">首页</a></li>
+                <li><a href="../../index.html" class="nav_a" target="_blank">首页</a></li>
                 <li><a href="#" class="nav_a">实验视频</a></li>
                 <li><a href="#" class="nav_a">芯片属性</a></li>
                 <li><a href="#" class="nav_a">教师</a></li>
