--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
     <title>数字逻辑电路虚拟仿真系统</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
     <link rel="stylesheet" href="/stylesheets/index.css">
+    <!--<script src="/jquery/jquery-3.3.1.min.js"></script>-->
+</head>
 <body>
 <!--顶部区域-->
 <div class="top">
@@ -14,17 +16,20 @@
                 <a href="#">数字逻辑电路虚拟仿真系统</a>
             </h1>
         </div>
-        <div class="top_input">
-            <input type="text" placeholder="搜索...">
-        </div>
+        <!--<div class="top_input">
+            <input type="text" placeholder="搜索..." >
+        </div>-->
     </div>
 </div>
 <!--内容区域-->
 <div class="content">
+    <div class="content_left">
+        <p>The devil's in the detail.</p>
+    </div>
     <div class="login">
         <div class="login_top">
             <div>
-                <h1>WELCOME TO</h1>
+                <h1 style="color: #1b6d85">WELCOME TO</h1>
             </div>
             <div>
                 <h1>
@@ -34,22 +39,29 @@
         </div>
         <div class="login_middle">
             <div class="account">
-                <span>账号：</span><input type="text">
-                <br>
-                <span>密码：</span><input type="password">
-                <button class="btn-info">Login</button>
+                <div>
+                    <img src="/images/account.png">
+                    <input type="text" style="background-color: #faffbd">
+                </div>
+                <div>
+                    <img src="/images/password.png">
+                    <input type="password" style="background-color: #faffbd">
+                </div>
+                <button class="btn-info" >Login</button>
             </div>
         </div>
         <div class="login_bottom">
-            <a href="#">注册/Register</a>
-            <a href="#">找回密码/Reset password</a>
-            <a href="/administrator">管理员/Administrator</a>
+            <a href="#" style="color: #0099cc">注册/Register</a>
+            <a href="#" style="color: #0099cc">找回密码/Reset password</a>
+            <a href="/administrator" style="color: #0099cc">管理员/Administrator</a>
         </div>
     </div>
 
 </div>
 <!--底部区域-->
 <div class="footer"></div>
+<script>
+</script>
 </body>
 </html>
 
