--- a/views/quote.html
+++ b/views/quote.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+<!--<link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">-->
 
 <script src="/jquery/jquery-3.3.1.min.js"></script>
-<script src="/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-<script src="/vue/vue.min.js"></script>
+<!--<script src="/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
+<!--<script src="/vue/vue.min.js"></script>-->
 
