--- a/views/teachers/teacher.html
+++ b/views/teachers/teacher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>老师</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
-    <link rel="stylesheet" href="/stylesheets/administrator.css">
+    <link rel="stylesheet" href="/stylesheets/teacher.css">
 </head>
 <body>
 <!--顶部区域-->
@@ -51,61 +51,5 @@
 </div>
 <!--底部区域-->
 <div class="footer"></div>
-<script>
-    window.onload=function () {
-        var nav_a=document.getElementsByClassName("nav_a");
-        console.log(nav_a);
-        /*for(var i=0;i<nav_a.length;i++){
-            nav_a[i].onmouseover=function () {
-                nav_a[i].style.opacity="0.5";
-            };
-            nav_a[i].onmouseout=function () {
-                nav_a[i].style.opacity="1";
-            };
-            //为什么加个循环之后就不行了
-        }*/
-        //以下是需要优化的代码！！
-        function setOpacity() {
-            //设置a标签的悬浮透明度，CSS找不到这里的a标签很奇怪
-            nav_a[0].onmouseover=function () {
-                nav_a[0].style.opacity="0.5";
-            };
-            nav_a[0].onmouseout=function () {
-                nav_a[0].style.opacity="1";
-            };
-            nav_a[1].onmouseover=function () {
-                nav_a[1].style.opacity="0.5";
-            };
-            nav_a[1].onmouseout=function () {
-                nav_a[1].style.opacity="1";
-            };
-            nav_a[2].onmouseover=function () {
-                nav_a[2].style.opacity="0.5";
-            };
-            nav_a[2].onmouseout=function () {
-                nav_a[2].style.opacity="1";
-            };
-            nav_a[3].onmouseover=function () {
-                nav_a[3].style.opacity="0.5";
-            };
-            nav_a[3].onmouseout=function () {
-                nav_a[3].style.opacity="1";
-            };
-            nav_a[4].onmouseover=function () {
-                nav_a[4].style.opacity="0.5";
-            };
-            nav_a[4].onmouseout=function () {
-                nav_a[4].style.opacity="1";
-            };
-            nav_a[5].onmouseover=function () {
-                nav_a[5].style.opacity="0.5";
-            };
-            nav_a[5].onmouseout=function () {
-                nav_a[5].style.opacity="1";
-            };
-        }
-        setOpacity();
-    }
-</script>
 </body>
 </html>
