--- a/views/teachers/teacher.html
+++ b/views/teachers/teacher.html
@@ -40,8 +40,7 @@
     <div class="contentAdministratorLeft">
         <ul>
             <li><a href="/newLab">新建实验</a></li>
-            <li><a href="#">布置实验</a></li>
-            <li><a href="#">发布实验</a></li>
+            <li><a href="/publishLab">发布实验</a></li>
             <li><a href="#">批改实验结果与实验报告</a></li>
         </ul>
     </div>
