--- a/views/teachers/newLab.html
+++ b/views/teachers/newLab.html
@@ -41,7 +41,7 @@
 	<div class="contentAdministratorLeft">
 		<ul>
 			<li>
-				<a href="newLab">新建实验</a>
+				<a href="/newLab">新建实验</a>
 			</li>
 			<li>
 				<a href="#">布置实验</a>
