--- a/views/teachers/newLab.html
+++ b/views/teachers/newLab.html
@@ -41,7 +41,7 @@
 	<div class="contentAdministratorLeft">
 		<ul>
 			<li>
-				<a href="newLab">新建实验</a>
+				<a href="/newLab">新建实验</a>
 			</li>
 			<li>
 				<a href="publishLab">发布实验</a>
@@ -72,7 +72,7 @@
 						</td>
 					</tr>
 					<tr>
-						<th name="teach_redio">实验教学视频：</th>
+						<th name="teach_radio">实验教学视频：</th>
 						<td>
 							<input type="file" />
 						</td>
