删除无用的html

--- a/public/stylesheets/teacher.css
+++ b/public/stylesheets/teacher.css
@@ -81,7 +81,7 @@
 .contentAdministrator .contentAdministratorRight{
     width: 930px;
     height: 500px;
-    background-color: green;
+    background-color: whitesmoke;
     float: right;
 }
 .contentAdministrator .contentAdministratorLeft ul li{
