--- a/views/admin/administrator.html
+++ b/views/admin/administrator.html
@@ -28,7 +28,7 @@
                 <li><a href="/" class="nav_a">首页</a></li>
                 <li><a href="#" class="nav_a">实验视频</a></li>
                 <li><a href="#" class="nav_a">芯片属性</a></li>
-                <li><a href="/teacher" class="nav_a">教师</a></li>
+                <li><a href="/newLab" class="nav_a">教师</a></li>
                 <li><a href="/student" class="nav_a" >学生</a></li>
                 <li><a href="#" class="nav_a">管理员</a></li>
             </ul>
