--- a/views/teachers/publishLab.html
+++ b/views/teachers/publishLab.html
@@ -36,7 +36,7 @@
                 <li><a href="/" class="nav_a">首页</a></li>
                 <li><a href="#" class="nav_a">实验视频</a></li>
                 <li><a href="#" class="nav_a">芯片属性</a></li>
-                <li><a href="/teacher" class="nav_a">教师</a></li>
+                <li><a href="/newLab" class="nav_a">教师</a></li>
                 <li><a href="/student" class="nav_a">学生</a></li>
                 <li><a href="/administrator" class="nav_a">管理员</a></li>
             </ul>
@@ -54,7 +54,7 @@
 				<a href="publishLab">发布实验</a>
 			</li>
 			<li>
-				<a href="#">批改实验结果与实验报告</a>
+				<a href="checkLab">批改实验结果与实验报告</a>
 			</li>
 		</ul>
 	</div>
