--- a/views/students/require_lab.html
+++ b/views/students/require_lab.html
@@ -28,7 +28,7 @@
                 <li><a class="nav_a" href="/">首页</a></li>
                 <li><a class="nav_a" href="#">实验视频</a></li>
                 <li><a class="nav_a" href="#">芯片属性</a></li>
-                <li><a class="nav_a" href="/teacher" >教师</a></li>
+                <li><a class="nav_a" href="/newLab" >教师</a></li>
                 <li><a class="nav_a" href="#">学生</a></li>
                 <li><a class="nav_a" href="/administrator">管理员</a></li>
             </ul>
