--- a/views/students/student.html
+++ b/views/students/student.html
@@ -29,7 +29,7 @@
                 <li><a class="nav_a" href="#">实验视频</a></li>
                 <li><a class="nav_a" href="#">芯片属性</a></li>
                 <li><a class="nav_a" href="/teacher" >教师</a></li>
-                <li><a class="nav_a" href="#">学生</a></li>
+                <li><a class="nav_a" href="/student">学生</a></li>
                 <li><a class="nav_a" href="/administrator">管理员</a></li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
             <li><a href="#">自主实验</a></li>
             <li><a href="#">保存实验结果</a></li>
             <li><a href="#">在线提交实验报告</a></li>
-            <li><a href="#">查看成绩与评语</a></li>
+            <li><a href="/score">查看成绩与评语</a></li>
         </ul>
     </div>
     <div class="contentRight">
