--- a/views/teachers/publishLab.html
+++ b/views/teachers/publishLab.html
@@ -5,13 +5,6 @@
     <title>老师</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
     <link rel="stylesheet" href="/stylesheets/teacher.css">
-    <style type="text/css">
-    	.contentAdministrator .contentAdministratorLeft ul li:nth-child(1){
-    background-color: #f6f4f0;}
-    	.contentAdministrator .contentAdministratorLeft ul li:nth-child(2){
-    background-color: #339999;}
-
-    </style>
 
 </head>
 <body>
@@ -46,18 +39,29 @@
 <!--内容区域-->
 <div class="contentAdministrator">
 	<div class="contentAdministratorLeft">
-		<ul>
-			<li>
-				<a href="newLab">新建实验</a>
-			</li>
-			<li>
-				<a href="publishLab">发布实验</a>
-			</li>
-			<li>
-				<a href="checkLab">批改实验结果与实验报告</a>
-			</li>
-		</ul>
-	</div>
+			<ul>
+				<li>
+					<a href="/newLab">新建实验</a>
+				</li>
+				<li style="background-color: #339999">
+					<a href="/publishLab">发布实验</a>
+				</li>
+				<li class="dropdown" >
+					<a href="/wholeWork">批改实验结果与实验报告</a>
+					<ul class="dropdown-content">
+						<li>
+							<a href="/wholeWork">全部作业</a>
+						</li>
+						<li>
+							<a href="/uncheckedWork">未改作业</a>
+						</li>
+						<li>
+							<a href="/checkedWork">已改作业</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	<div class="contentAdministratorRight">
 		<center>
 			<form>
