部分完成学生必做实验界面

--- a/views/teachers/newLab.html
+++ b/views/teachers/newLab.html
@@ -44,9 +44,9 @@
 				<a href="/newLab">新建实验</a>
 			</li>
 			<li>
-				<a href="publishLab">发布实验</a>
+				<a href="/publishLab">发布实验</a>
 			</li>
-			<li>
+            <li>
 				<a href="#">批改实验结果与实验报告</a>
 			</li>
 		</ul>
