--- a/views/teachers/publishLab.html
+++ b/views/teachers/publishLab.html
@@ -5,14 +5,14 @@
     <title>老师</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
     <link rel="stylesheet" href="/stylesheets/teacher.css">
-    <style type="text/css">
+    <style>
     	.contentAdministrator .contentAdministratorLeft ul li:nth-child(1){
-    background-color: #f6f4f0;}
+            background-color: #f6f4f0;
+        }
     	.contentAdministrator .contentAdministratorLeft ul li:nth-child(2){
-    background-color: #339999;}
-
+            background-color: #339999;
+        }
     </style>
-
 </head>
 <body>
 <!--顶部区域-->
