--- a/views/students/require_lab.html
+++ b/views/students/require_lab.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>必做实验</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
-    <link rel="stylesheet" href="/stylesheets/student.css">
+    <link rel="stylesheet" href="/stylesheets/require_lab.css">
 </head>
 <body>
 <!--顶部区域-->
@@ -29,8 +29,54 @@
                 <li><a class="nav_a" href="#">实验视频</a></li>
                 <li><a class="nav_a" href="#">芯片属性</a></li>
                 <li><a class="nav_a" href="/teacher" >教师</a></li>
-                <li><a class="nav_a" href="#">学生</a></li>
+                <li><a class="nav_a" href="/student">学生</a></li>
                 <li><a class="nav_a" href="/administrator">管理员</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!--内容区域-->
+<div class="content">
+    <div class="contentLeft">
+        <ul>
+            <li><a href="#">设计篮球竞赛24s定时电路</a></li>
+            <li><a href="#">一、实验目的</a></li>
+            <li><a href="#">二、实验所用器件和仪器设备</a></li>
+            <li><a href="#">三、实验预习和要求</a></li>
+            <li><a href="#">四、实验原理</a></li>
+            <li><a href="#">五、设计思路</a></li>
+            <li><a href="#">六、实验内容</a></li>
+            <li><a href="#">七、实验报告要求</a></li>
+            <li><a href="#">八、思考题</a></li>
+            <li><a href="#">九、开始实验</a></li>
+        </ul>
+    </div>
+    <div class="contentRight">
+        <div class="destination">
+            <ul>
+                <li><p style="font-weight: bold">一：实验目的<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="equipment">
+            <ul>
+                <li><p style="font-weight: bold">二：实验所用器件和仪器设备<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="demand">
+            <ul>
+                <li><p style="font-weight: bold">三：实验预习和要求<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
             </ul>
         </div>
     </div>
