--- a/views/students/score.html
+++ b/views/students/score.html
@@ -5,12 +5,17 @@
     <title>成绩</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
     <link rel="stylesheet" href="/stylesheets/student.css">
-   <style>
+    <link rel="stylesheet" href="/stylesheets/score.css">
+
+    <style>
    	.content .contentLeft ul li:nth-child(1){
     	background-color: #f6f4f0;
 	}
+    .content .contentLeft ul li:nth-child(6){
+        background-color: #339999;
+    }
    </style>
-    
+
 </head>
 <body>
 <!--顶部区域-->
@@ -54,7 +59,20 @@
         </ul>
     </div>
     <div class="contentRight">
-
+        <div style="background-color: #dcdcdc; height: 50px;">
+            <div style="text-align: center"><span style="font-size: 30px;">个人信息</span></div>
+        </div>
+        <table style="border: 3px solid #c1d1db;">
+            <tr>
+                <td >学号：</td>
+                <td >姓名：</td>
+                <td style="width: 320px;">学院：</td>
+            </tr>
+            <tr>
+                <td style="width: 450px;" colspan="2">专业：</td>
+                <td style="width: 450px;">班级：</td>
+            </tr>
+        </table>
     </div>
 </div>
 <!--底部区域-->
