--- a/views/students/score.html
+++ b/views/students/score.html
@@ -50,7 +50,7 @@
 <div class="content">
     <div class="contentLeft">
         <ul>
-            <li><a href="#">必做实验</a></li>
+            <li><a href="/student">必做实验</a></li>
             <li><a href="#">选做实验</a></li>
             <li><a href="#">自主实验</a></li>
             <li><a href="/score">查看成绩与评语</a></li>
