teacher.css去掉红色的背景

--- a/public/stylesheets/teacher.css
+++ b/public/stylesheets/teacher.css
@@ -70,7 +70,7 @@
     max-width: 1140px;
     height: 500px;
     margin: 10px auto;
-    background-color: red;
+    /*background-color: #339999;*/
 }
 .contentAdministrator .contentAdministratorLeft{
     width: 200px;
