简洁的完成教师项目，还需要修改

--- a/public/stylesheets/teacher.css
+++ b/public/stylesheets/teacher.css
@@ -81,8 +81,11 @@
 .contentAdministrator .contentAdministratorRight{
     width: 930px;
     height: 500px;
-    background-color: whitesmoke;
+    background-color: #339999;
     float: right;
+    color:black ;
+    font-size: larger;
+
 }
 .contentAdministrator .contentAdministratorLeft ul li{
     height: 35px;
