--- a/views/teachers/checkedWork.html
+++ b/views/teachers/checkedWork.html
@@ -46,7 +46,7 @@
                 <a href="/publishLab">发布实验</a>
             </li>
             <li class="dropdown" style="background-color: #339999">
-                <a href="/wholeWork">批改实验结果与实验报告</a>
+                <a href="#">批改实验结果与实验报告</a>
                 <ul class="dropdown-content">
                     <li>
                         <a href="/wholeWork">全部作业</a>
@@ -62,7 +62,31 @@
         </ul>
     </div>
     <div class="contentAdministratorRight">
-
+        <center>
+            <table class="homework">
+                <tr>
+                    <th>学号</th>
+                    <th>姓名</th>
+                    <th>班级</th>
+                    <th>批改状态</th>
+                    <th>作业</th>
+                </tr>
+                <tr>
+                    <td>20152100010</td>
+                    <td>张懿</td>
+                    <td>网络工程7班</td>
+                    <td>59</td>
+                    <td><a href="#">作业详情</a></td>
+                </tr>
+                <tr>
+                    <td>20152100195</td>
+                    <td>张锐</td>
+                    <td>网络工程7班</td>
+                    <td>60</td>
+                    <td><a href="#">作业详情</a></td>
+                </tr>
+            </table>
+        </center>
 
     </div>
 </div>
