--- a/views/teachers/publishLab.html
+++ b/views/teachers/publishLab.html
@@ -5,18 +5,6 @@
     <title>老师</title>
     <link rel="stylesheet" href="/stylesheets/base.css">
     <link rel="stylesheet" href="/stylesheets/teacher.css">
-<<<<<<< HEAD
-
-=======
-    <style>
-    	.contentAdministrator .contentAdministratorLeft ul li:nth-child(1){
-            background-color: #f6f4f0;
-        }
-    	.contentAdministrator .contentAdministratorLeft ul li:nth-child(2){
-            background-color: #339999;
-        }
-    </style>
->>>>>>> dev-Di
 </head>
 <body>
 <!--顶部区域-->
@@ -58,7 +46,7 @@
 					<a href="/publishLab">发布实验</a>
 				</li>
 				<li class="dropdown" >
-					<a href="/wholeWork">批改实验结果与实验报告</a>
+					<a href="#">批改实验结果与实验报告</a>
 					<ul class="dropdown-content">
 						<li>
 							<a href="/wholeWork">全部作业</a>
