--- a/views/teachers/uncheckedWork.html
+++ b/views/teachers/uncheckedWork.html
@@ -68,6 +68,7 @@
                     <th>学号</th>
                     <th>姓名</th>
                     <th>班级</th>
+                    <th>实验项目</th>
                     <th>批改状态</th>
                     <th>作业</th>
                 </tr>
@@ -75,6 +76,7 @@
                     <td>20152100066</td>
                     <td>武迪</td>
                     <td>网络工程6班</td>
+                    <td>实验1</td>
                     <td>未改</td>
                     <td><a href="#">作业详情</a></td>
                 </tr>
@@ -82,6 +84,7 @@
                     <td>20152100160</td>
                     <td>浩南</td>
                     <td>网络工程6班</td>
+                    <td>实验1</td>
                     <td>未改</td>
                     <td><a href="#">作业详情</a></td>
                 </tr>
