--- a/views/students/score.html
+++ b/views/students/score.html
@@ -11,7 +11,7 @@
    	.content .contentLeft ul li:nth-child(1){
     	background-color: #f6f4f0;
 	}
-    .content .contentLeft ul li:nth-child(6){
+    .content .contentLeft ul li:nth-child(4){
         background-color: #339999;
     }
    </style>
@@ -71,6 +71,33 @@
                 <td style="width: 450px;">班级：</td>
             </tr>
         </table>
+        <div class="widget-body">
+            <ul class="list-group">
+                <li class="pull-left  list-group-item-waring col-md-1 col-sm-1">实验项目</li>
+                <li class="pull-left list-group-item-waring col-sm-1 col-md-1">批改详情</li>
+                <li class="col-md-1 col-sm-1 pull-left list-group-item-waring">作业详情</li>
+            </ul>
+            <ul class="list-group">
+                <li class="pull-left list-group-item-success col-sm-1 col-md-1">实验一</li>
+                <li class="pull-left list-group-item-success col-md-1 col-sm-1">98</li>
+                <li class="pull-left list-group-item-success col-sm-1 col-md-1 "><a href="#"><span class="list-group-item-success">点击查看</span></a></li>
+            </ul>
+            <ul class="list-group">
+                <li class="pull-left list-group-item-info col-md-1 col-sm-1">实验二</li>
+                <li class="pull-left list-group-item-info col-sm-1 col-md-1">96</li>
+                <li class="pull-left list-group-item-info col-md-1 col-sm-1"><a href="#"><span class="list-group-item-info">点击查看</span></a></li>
+            </ul>
+            <ul class="list-group">
+                <li class="pull-left list-group-item-success col-sm-1 col-md-1">实验三</li>
+                <li class="pull-left list-group-item-success col-md-1 col-sm-1">未批改</li>
+                <li class="pull-left list-group-item-success col-sm-1 col-md-1"><a href="#"><span class="list-group-item-success">点击查看</span></a></li>
+            </ul>
+            <ul class="list-group">
+                <li class="pull-left list-group-item-info col-md-1 col-sm-1">实验四</li>
+                <li class="pull-left list-group-item-info col-sm-1 col-md-1">未提交</li>
+                <li class="pull-left list-group-item-info col-md-1 col-sm-1"><a href="#"><span class="list-group-item-info">点击查看</span></a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <!--底部区域-->
