测试分支功能

--- a/views/students/score.html
+++ b/views/students/score.html
@@ -9,7 +9,7 @@
 
     <style>
    	.content .contentLeft ul li:nth-child(1){
-    	background-color: #f6f4f0;
+    	background-color: #f6f4f0;//颜色
 	}
     .content .contentLeft ul li:nth-child(4){
         background-color: #339999;
