--- a/views/students/score.html
+++ b/views/students/score.html
@@ -12,7 +12,7 @@
     	background-color: #f6f4f0;//颜色
 	}
     .content .contentLeft ul li:nth-child(4){
-        background-color: #339999;//颜色
+        background-color: #339999;//颜色..
     }
    </style>
 
