--- a/views/students/require_lab.html
+++ b/views/students/require_lab.html
@@ -79,6 +79,51 @@
                 <li><p>3：</p></li>
             </ul>
         </div>
+        <div class="theory">
+            <ul>
+                <li><p style="font-weight: bold">四：实验原理<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="design">
+            <ul>
+                <li><p style="font-weight: bold">五：设计思路<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="lab_contain">
+            <ul>
+                <li><p style="font-weight: bold">六：实验内容<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="reporter">
+            <ul>
+                <li><p style="font-weight: bold">七：实验报告要求<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
+        <div class="thinking">
+            <ul>
+                <li><p style="font-weight: bold">八：思考题<p/></li>
+                <hr style="width: 600px;margin-left: 0px;">
+                <li><p>1：</p></li>
+                <li><p>2：</p></li>
+                <li><p>3：</p></li>
+            </ul>
+        </div>
     </div>
 </div>
 <!--底部区域-->
