背景颜色小改动

--- a/views/teachers/uncheckedWork.html
+++ b/views/teachers/uncheckedWork.html
@@ -78,7 +78,7 @@
                     <td>网络工程6班</td>
                     <td>实验1</td>
                     <td>未改</td>
-                    <td><a href="#">作业详情</a></td>
+                    <td><a href="#" style="color: black">作业详情</a></td>
                 </tr>
                 <tr>
                     <td>20152100160</td>
@@ -86,7 +86,7 @@
                     <td>网络工程6班</td>
                     <td>实验1</td>
                     <td>未改</td>
-                    <td><a href="#">作业详情</a></td>
+                    <td><a href="#" style="color: black">作业详情</a></td>
                 </tr>
             </table>
         </center>
