--- a/public/stylesheets/require_lab.css
+++ b/public/stylesheets/require_lab.css
@@ -97,13 +97,13 @@
 .content .contentRight{
     width: 930px;
     height: 1440px;
-    background-color: skyblue;
+    background-color: #f6f6f6;
     float: right;
 }
 .content .contentRight .destination{
     width: 100%;
     height: 180px;
-    background-color: #1b6d85;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .destination ul li{
     width: 100%;
@@ -113,7 +113,7 @@
 .content .contentRight .equipment{
     width: 100%;
     height: 200px;
-    background-color: #36997d;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .equipment ul li{
     width: 100%;
@@ -123,7 +123,7 @@
 .content .contentRight .demand{
     width: 100%;
     height: 180px;
-    background-color: #1b6d85;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .demand ul li{
     width: 100%;
@@ -133,7 +133,7 @@
 .content .contentRight .theory{
     width: 100%;
     height: 180px;
-    background-color: #36997d;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .theory ul li{
     width: 100%;
@@ -143,7 +143,7 @@
 .content .contentRight .design{
     width: 100%;
     height: 180px;
-    background-color: #1b6d85;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .design ul li{
     width: 100%;
@@ -153,7 +153,7 @@
 .content .contentRight .lab_contain{
     width: 100%;
     height: 180px;
-    background-color: #36997d;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .lab_contain ul li{
     width: 100%;
@@ -163,7 +163,7 @@
 .content .contentRight .reporter{
     width: 100%;
     height: 180px;
-    background-color: #1b6d85;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .reporter ul li{
     width: 100%;
@@ -173,7 +173,7 @@
 .content .contentRight .thinking{
     width: 100%;
     height: 180px;
-    background-color: #36997d;
+    /*background-color: #f6f6f6;*/
 }
 .content .contentRight .thinking ul li{
     width: 100%;
