--- a/public/stylesheets/teacher.css
+++ b/public/stylesheets/teacher.css
@@ -81,7 +81,7 @@
 .contentAdministrator .contentAdministratorRight{
     width: 930px;
     height: 500px;
-    background-color: #339999;
+    background-color: #dcdcdc;
     float: right;
     color:black ;
     font-size: larger;
