--- a/views/teachers/checkedWork.html
+++ b/views/teachers/checkedWork.html
@@ -78,7 +78,7 @@
                     <td>网络工程7班</td>
                     <td>实验1</td>
                     <td>59</td>
-                    <td><a href="#">作业详情</a></td>
+                    <td><a href="#" style="color: black">作业详情</a></td>
                 </tr>
                 <tr>
                     <td>20152100195</td>
@@ -86,7 +86,7 @@
                     <td>网络工程7班</td>
                     <td>实验1</td>
                     <td>60</td>
-                    <td><a href="#">作业详情</a></td>
+                    <td><a href="#" style="color: black">作业详情</a></td>
                 </tr>
             </table>
         </center>
